# learn-agentic-ai

./: pyproject.toml
01_ai_agents_first/01_uv/: pyproject.toml
01_ai_agents_first/01_uv/src/uv_project/: __init__.py
01_ai_agents_first/02_openrouter/: OpenRouter_AI_Agents_SDK.ipynb
01_ai_agents_first/03_hello_agent/async/hello_agent/: main.py
01_ai_agents_first/03_hello_agent/sync/hello_agent/: main.py
01_ai_agents_first/05_chatbot/chatbot/: main.py
01_ai_agents_first/06_streaming/: streaming.ipynb  streaming_gemini.ipynb
01_ai_agents_first/06_streaming/chatbot-with-chainlite/: main.py
01_ai_agents_first/07_tools/: 05_tools.ipynb
01_ai_agents_first/07_tools/tools-with-chainlite/: main.py
01_ai_agents_first/08_agents_as_tool/: agents_as_tools.ipynb
01_ai_agents_first/08_agents_as_tool/chatbot/: chat.py
01_ai_agents_first/09_context/: context_openai_agents_sdk.ipynb
01_ai_agents_first/09_context/chatbot/: main.py
01_ai_agents_first/10_handoffs/chatbot/: main.py
